add favicon, add meta image

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="./src/assets/img/react.svg" />
+  <link rel="icon" type="image/svg+xml" href="/react.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Author: Kristian Cifuentes,
         Pagina de comercio desarrollada con React js ">
   <meta property="og:title" content="E-commerce site developed with React js">
   <meta property="og:description" content="E-commerce site developed with React js">
-  <meta property="og:image" content="">
+  <meta property="og:image" content="https://i.postimg.cc/P5LqzB5M/react-store.jpg">
   <meta property="og:url" content="https://react-shop-bib.pages.dev/">
   <meta property="og:type" content="website">
   <title>React Online Store</title>
