--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <link rel="icon" type="image/svg+xml" href="/react.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Author: Kristian Cifuentes,
-        Pagina de comercio desarrollada con React js ">
-  <meta property="og:title" content="E-commerce site developed with React js">
-  <meta property="og:description" content="E-commerce site developed with React js">
+        Pagina de comercio electrónico desarrollada con React">
+  <meta property="og:title" content="Online Store developed with React">
+  <meta property="og:description" content="Online Store developed with React">
   <meta property="og:image" content="https://i.postimg.cc/P5LqzB5M/react-store.jpg">
   <meta property="og:url" content="https://react-shop-bib.pages.dev/">
   <meta property="og:type" content="website">
